--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-prod": "ng build -c production --aot",
+    "build-staging": "ng build -c staging --aot",
+    "build-qa": "ng build -c qa --aot"
   },
   "private": true,
   "dependencies": {
