--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ngx-bootstrap": "^5.1.1",
     "ngx-clipboard": "^12.3.0",
     "ngx-owl-carousel-o": "^2.0.3",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
