--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@auth0/angular-jwt": "^3.0.0",
-    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "@types/d3": "^5.16.0",
     "bootstrap": "^4.3.1",
     "bootstrap-icons": "^1.7.2",
@@ -44,9 +43,9 @@
     "raphael": "^2.3.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
-    "sweetalert2": "^11.3.0",
     "tslib": "^1.10.0",
     "types": "^0.1.1",
+    "url-parse": "^1.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
