TRAC-4933 POG language json update

--- a/src/app/features/proof-verification/ProofJSONs/ActionConfigurations.json
+++ b/src/app/features/proof-verification/ProofJSONs/ActionConfigurations.json
@@ -940,7 +940,7 @@
           "ScrollToPointer": false,
           "FrameAutoScroll": true,
           "FrameScrollBars": "",
-          "ToastMessage": "",
+          "ToastMessage": "#{ToastMessage}",
           "ToastPosition": null,
           "ActionDuration": 2
         }
