--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@types/dagre-d3": "^0.6.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": " 7.0.7",
     "codelyzer": "^5.0.0",
     "dagre-d3": "^0.6.4",
     "jasmine-core": "~3.4.0",
